Fix bug where oversizes characters would make the line too tall and mess up the layout.

--- a/resources/themes/default-terminal/terminal-viewer.scss
+++ b/resources/themes/default-terminal/terminal-viewer.scss
@@ -74,8 +74,13 @@
 .CodeMirror-lines {
   padding: 0 0; /* Vertical padding around content */
 }
+
 .CodeMirror pre {
   padding: 0 0; /* Horizontal padding of content */
+}
+
+.CodeMirror pre.CodeMirror-line {
+  height: var(--terminal-font-unit-height);
 }
 
 .CodeMirror-selected, .terminal-unfocused .CodeMirror-selected {
